# SPDX-License-Identifier: BSD-2-Clause-FreeBSD
#
# Copyright 2018-2020 Dimitar Dimitrov <dimitar@dinux.eu>
# All rights reserved.


dist_pru_DATA = \
    am335x.pru0 \
    am335x.pru1 \
    am437x.icss0.pru0 \
    am437x.icss0.pru1 \
    am437x.icss1.pru0 \
    am437x.icss1.pru1 \
    am572x.icss0.pru0 \
    am572x.icss0.pru1 \
    am572x.icss1.pru0 \
    am572x.icss1.pru1 \
    am65x.icssg0.pru0 \
    am65x.icssg0.pru1 \
    am65x.icssg0.rtu_pru0 \
    am65x.icssg0.rtu_pru1 \
    am65x.icssg0.tx_pru0 \
    am65x.icssg0.tx_pru1 \
    am65x.icssg1.pru0 \
    am65x.icssg1.pru1 \
    am65x.icssg1.rtu_pru0 \
    am65x.icssg1.rtu_pru1 \
    am65x.icssg1.tx_pru0 \
    am65x.icssg1.tx_pru1 \
    am65x.icssg2.pru0 \
    am65x.icssg2.pru1 \
    am65x.icssg2.rtu_pru0 \
    am65x.icssg2.rtu_pru1 \
    am65x.icssg2.tx_pru0 \
    am65x.icssg2.tx_pru1

prudir = $(exec_prefix)/$(target_alias)/lib/device-specs
