# SPDX-License-Identifier: BSD-2-Clause-FreeBSD
#
# Copyright 2018-2020 Dimitar Dimitrov <dimitar@dinux.eu>
# All rights reserved.


dist_pru_DATA = \
    pruelf-am335x.pru0.x \
    pruelf-am335x.pru1.x \
    pruelf-am437x.icss0.pru0.x \
    pruelf-am437x.icss0.pru1.x \
    pruelf-am437x.icss1.pru0.x \
    pruelf-am437x.icss1.pru1.x \
    pruelf-am572x.icss0.pru0.x \
    pruelf-am572x.icss0.pru1.x \
    pruelf-am572x.icss1.pru0.x \
    pruelf-am572x.icss1.pru1.x \
    pruelf-am65x.icssg0.pru0.x \
    pruelf-am65x.icssg0.pru1.x \
    pruelf-am65x.icssg0.rtu_pru0.x \
    pruelf-am65x.icssg0.rtu_pru1.x \
    pruelf-am65x.icssg0.tx_pru0.x \
    pruelf-am65x.icssg0.tx_pru1.x \
    pruelf-am65x.icssg1.pru0.x \
    pruelf-am65x.icssg1.pru1.x \
    pruelf-am65x.icssg1.rtu_pru0.x \
    pruelf-am65x.icssg1.rtu_pru1.x \
    pruelf-am65x.icssg1.tx_pru0.x \
    pruelf-am65x.icssg1.tx_pru1.x \
    pruelf-am65x.icssg2.pru0.x \
    pruelf-am65x.icssg2.pru1.x \
    pruelf-am65x.icssg2.rtu_pru0.x \
    pruelf-am65x.icssg2.rtu_pru1.x \
    pruelf-am65x.icssg2.tx_pru0.x \
    pruelf-am65x.icssg2.tx_pru1.x

prudir = $(exec_prefix)/$(target_alias)/lib
